--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,8 @@ jobs:
       run: npm install
     - name: Run unit tests
       run: npm run test:unit
+    - name: Visualize softuni username
+      run: echo "danieibogdanov"
 
   test_ui:
     runs-on: ubuntu-latest
@@ -37,6 +39,6 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Start application
-      run: npm start
+      run: npm start &
     - name: Run unit tests
       run: npm run test:ui
