--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,5 +40,7 @@ jobs:
       run: npm install
     - name: Start application
       run: npm start &
-    - name: Run unit tests
+    - name: Install playwright dependencies
+      run: npx playwright install
+    - name: Run ui tests
       run: npm run test:ui
