--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI and CD
+name: Node.js CI
 
 on:
   push:
@@ -7,12 +7,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test_unit:
+  run_unit_tests:
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
@@ -25,12 +24,12 @@ jobs:
     - name: Visualize softuni username
       run: echo "danieibogdanov"
 
-  test_ui:
+  run_ui_tests:
     runs-on: ubuntu-latest
-    
+    needs: run_unit_tests
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
@@ -44,3 +43,14 @@ jobs:
       run: npx playwright install
     - name: Run ui tests
       run: npm run test:ui
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: run_ui_tests
+    steps:
+        - uses: actions/checkout@v4
+        - uses: JorgeLNJunior/render-deploy@v1.4.4
+          with:
+            service_id: ${{ secrets.RENDER_SERVICE_ID }}
+            api_key: ${{ secrets.RENDER_API_KEY }}
+            wait_deploy: true
